tests/ui/fn_traits/parenthesized-fn-trait-in-qualified-path.stderr
error[E0229]: associated item constraints are not allowed here
  --> $DIR/parenthesized-fn-trait-in-qualified-path.rs:5:14
   |
LL |     <fn() as Fn()>::call;
   |              ^^^^ associated item constraint not allowed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0229`.
